# NBody

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
res/: theme.qss
src/: CMakeLists.txt  app.cpp  app.h  bhgrid.cpp  bhgrid.h  common.h.in  labelvaluepair.cpp  labelvaluepair.h  main.cpp  misc.h  mymath.h  particle.cpp  particle.h  qglcanvas.cpp  qglcanvas.h  qsfmlcanvas.cpp  qsfmlcanvas.h  simulation.cpp  simulation.h  solver.cpp  solver.h  vc.cpp  vc.h
